Add "missing_status" attribute to both forms, refs T851
Summary:
- "key" was unique across all attributes, which does not work...
- ... because "missing_status" test attribute needs to exist in both forms
- ... so modify the uniqueness to be `[key, form_group_id]` instead

Test Plan:
```
bin/behat -c application/tests/behat.yml -f progress application/tests/features/api.form_attributes.feature
bin/behat -c application/tests/behat.yml -f progress application/tests/features/api.posts.feature
```

Reviewers: rjmackay

Subscribers: vladimir

Maniphest Tasks: T851

Differential Revision: https://phabricator.ushahidi.com/D519

--- a/application/tests/datasets/ushahidi/Base.yml
+++ b/application/tests/datasets/ushahidi/Base.yml
@@ -167,6 +167,17 @@ form_attributes:
     form_group_id: 1
   -
     id: 11
+    label: "Status"
+    key: "missing_status"
+    type: "varchar"
+    input: "select"
+    required: 0
+    options: '["information_sought","is_note_author","believed_alive","believed_missing","believed_dead"]'
+    priority: 5
+    cardinality: 0
+    form_group_id: 1
+  -
+    id: 12
     label: "Links"
     key: "links"
     type: "varchar"
@@ -176,7 +187,7 @@ form_attributes:
     cardinality: 0
     form_group_id: 1
   -
-    id: 12
+    id: 13
     label: "Second Point"
     key: "second_point"
     type: "point"
