Add laravel boilerplate

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "ext-mbstring": "*",
         "ext-mcrypt": "*",
         "league/csv": "~7.1@dev",
+        "laravel/lumen-framework": "5.4.*",
         "ddeboer/data-import": "dev-master",
         "symfony/property-access": "~2.5",
         "league/event": "^2.2@dev",
@@ -66,12 +67,14 @@
     },
     "autoload": {
         "psr-4": {
-            "Ushahidi\\": "src/"
+            "Ushahidi\\": "src/",
+            "Ushahidi\\App\\": "app/"
         }
     },
     "autoload-dev": {
         "classmap": [
-            "tests/"
+            "tests/",
+            "database/"
         ]
     },
     "minimum-stability": "dev",
@@ -101,6 +104,9 @@
             "phpunit --no-coverage",
             "phpspec run --no-code-generation",
             "behat --strict --profile ci"
+        ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
         ]
     }
 }
