--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,13 +1,31 @@
-<phpunit
+<?xml version="1.0" encoding="UTF-8"?>
+<phpunit backupGlobals="false"
+         backupStaticAttributes="false"
          bootstrap="tests/bootstrap.php"
          colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false"
+         syntaxCheck="false"
          >
-        <testsuites>
-            <testsuite name="Ushahidi Tests">
-                <directory>./tests/</directory>
-            </testsuite>
-        </testsuites>
-        <logging>
-            <log type="coverage-clover" target="coverage/phpunit.xml"/>
-        </logging>
+    <testsuites>
+        <testsuite name="Ushahidi Tests">
+            <directory>./tests/</directory>
+        </testsuite>
+    </testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./app</directory>
+        </whitelist>
+    </filter>
+    <logging>
+        <log type="coverage-clover" target="coverage/phpunit.xml"/>
+    </logging>
+    <php>
+        <env name="APP_ENV" value="testing"/>
+        <env name="CACHE_DRIVER" value="array"/>
+        <env name="QUEUE_DRIVER" value="sync"/>
+    </php>
 </phpunit>
